Import of KAARE/Business-Bof-Server-0.07 from CPAN.
gitpan-cpan-distribution: Business-Bof-Server
gitpan-cpan-version:      0.07
gitpan-cpan-path:         KAARE/Business-Bof-Server-0.07.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
-2005-07-01   Kaare Rasmussen <kar at kakidata dot dk>
+2005-07-03   Kaare Rasmussen <kar at kakidata dot dk>
+
+    Release 0.07
+
+    Added schedules back into the project. This time I rely on
+    Poco::Cron. The cron syntax is well known.
 
     Release 0.06
 
